force-app/main/default/objects/Vehicle_Pricing_Option__c/Vehicle_Pricing_Option__c.object-meta.xml
<CustomObject>
    <description>Vehicle Price Options for Republic Auto Used Car</description>
    <label>Vehicle Pricing Option</label>
    <nameField>
        <displayFormat>PRICEOPT-{0000000}</displayFormat>
        <label>Vehicle Pricing Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Pricing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>