force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Car_Financing_Downpayment__c.field-meta.xml
<CustomField>
    <fullName>Car_Financing_Downpayment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Car Financing Downpayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>