force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>