force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Installment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>