force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Promotion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Promotion Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>