force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Road_Tax_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Road_Tax_12_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Road Tax (12 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>