force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Total_Upfront_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Upfront Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>