force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Total_Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Vehicle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>