force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Trade_in_Discount__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trade-in Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>