force-app/main/default/objects/Vehicle_Pricing_Option__c/fields/Upfront_Downpayment__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Downpayment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Upfront Downpayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>